--- a/1post-tort-ciocolata.html
+++ b/1post-tort-ciocolata.html
@@ -1,9 +1,6 @@
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+ <html class="no-js"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,19 +10,7 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
-  <!--
-	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -59,10 +44,7 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+
 
 	</head>
 	<body>
@@ -81,7 +63,6 @@
 								<p></p>
 
 								<h2>Tort de Ciocolata</h2>
-								<!--<p>HandCrafted by <a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name">FreeHTML5.co</a></p> -->
 							</div>
 						</div>
 					</div>
@@ -94,7 +75,7 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Bucatarie</a></h1>
+					<h1 id="fh5co-logo"><a href="Bucatarie.html">Bucatarie</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
@@ -166,21 +147,15 @@
 			<!--<div class="col-md-4"> -->
 				<div class="feature-text">
 					<h3>Preparare</h3>
-					<p>Preîncalziți cuptorul la 180 de grade Celsius, , apoi am uns cu unt o forma de tort cu diametrul de 23 cm si am tapetat-o cu faina.Am amestecat faina cu cacaoa si le-am cernut. Intr-un vas, am batut albusurile spuma tare cu un praf de sare. Am adaugat apoi o lingura de rom si treptat zaharul impreuna cu zaharul vanilat si am mixat in continuare pana am obtinut o spuma tare si lucioasa. Am adaugat apoi galbenusurile si le-am incorporat usor cu spatula. La final am adaugat faina si cacaoa in ploaie si le-am incorporat tot cu spatula usor, prin miscari de rasturnare de jos in sus. Am turnat compozitia in tava pregatita si am pus-o imediat in cuptorul incins.</p>
+					<p>Am preîncalzit cuptorul la 180 de grade Celsius, apoi am uns cu unt o forma de tort cu diametrul de 23 cm si am tapetat-o cu faina.Am amestecat faina cu cacaoa si le-am cernut. Intr-un vas, am batut albusurile spuma tare cu un praf de sare. Am adaugat apoi o lingura de rom si treptat zaharul impreuna cu zaharul vanilat si am mixat in continuare pana am obtinut o spuma tare si lucioasa. Am adaugat apoi galbenusurile si le-am incorporat usor cu spatula. La final am adaugat faina si cacaoa in ploaie si le-am incorporat tot cu spatula usor, prin miscari de rasturnare de jos in sus. Am turnat compozitia in tava pregatita si am pus-o imediat in cuptorul incins.</p>
 					<p>Am copt 35 de minute la 180ºC pana blatul a trecut testul scobitorii (o scobitoare introdusa in blat iese curata, fara urme de aluat necopt). Cuptorul nu se deschide in primele 20 de minute si nici nu se reduce focul in timpul acesta. Altfel riscam ca blatul sa se lase.</p>
-					<p>Am luat vasul de pe aburi, am pus deoparte intr-un bol micut 2 linguri de crema, apoi am adaugat imediat ciocolata. Am amestecat pana s-a topit, apoi am adugat si cacaoa cernuta si am incorporat-o. Am lasat crema sa se raceasca.Cand s-a racit, am adaugat aromele. Pentru asamblarea tortului, am taiat blatul in 3 felii egale. Am pus prima felie pe un platou, apoi am pus pe ea un sfert din crema si am nivelat-o. Am pus a doua felie de blat, apoi inca un sfert de crema si a treia felie de blat. Pentru imbracarea tortului am folosit cealalta jumatate de crema.</p>
+					<p>Am luat vasul de pe aburi, am pus deoparte intr-un bol 2 linguri de crema, apoi am adaugat ciocolata. Am amestecat pana s-a topit, apoi am incorporat si cacaua. Am lasat crema sa se raceasca.Cand s-a racit, am adaugat aromele. Pentru asamblarea tortului, am taiat blatul in 3 felii egale. Am pus prima felie pe un platou, apoi am pus pe ea un sfert din crema si am nivelat-o. Am pus a doua felie de blat, apoi inca un sfert de crema si a treia felie de blat. Pentru imbracarea tortului am folosit cealalta jumatate de crema.</p>
 
 
 
 				</div>
 			</div>
-		<!--	<div class="col-md-4">
-				<div class="feature-text">
-					<h3>Django Python</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-				</div>
-			</div>
-		</div> -->
+
 
 
 	</div>
@@ -224,7 +199,7 @@
 										<div class="prod-title">
 											<h3><a href=""#>Beneficiile Alergarii</a></h3>
 											<span class="posted_by">Ianuarie 13</span>
-											<span class="comment"><a href="">3<i class="icon-bubble2"></i></a></span>
+											<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 											<p>Alergarea e una dintre cele mai eficiente, necostisitoare moduri de a arde calorii și a fii în formă. </p>
 											<p><a href="2post-beneficiile-alergarii.html">Vezi mai mult...</a></p>
 
@@ -240,7 +215,7 @@
 										<div class="prod-title">
 											<h3><a href=""#>Tort de Ciocolata</a></h3>
 											<span class="posted_by">Ianuarie 12</span>
-											<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
+											<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 											<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
 											<p><a href="1post-tort-ciocolata.html">Vezi mai mult...</a></p>
 										</div>
@@ -255,7 +230,7 @@
 										<div class="prod-title">
 											<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
 											<span class="posted_by">Decembrie 30</span>
-											<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+											<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 											<p>Vrei sa ai condimente proaspete pentru mancarurile tale in fiecare zi?</p>
 											<p><a href="6post-propria-ta-gradina.html">Vezi mai mult...</a></p>
 										</div>
