--- a/3post-atentie-la-tinuta.html
+++ b/3post-atentie-la-tinuta.html
@@ -1,9 +1,6 @@
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,7 +24,7 @@
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
-	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
+
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -45,10 +42,7 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+
 
 	</head>
 	<body>
@@ -69,7 +63,7 @@
 								<p></p>
 
 								<h2>Atentie la Tinuta</h2>
-								<!--<p>HandCrafted by <a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name">FreeHTML5.co</a></p> -->
+
 							</div>
 						</div>
 					</div>
@@ -82,7 +76,7 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Pentru Tine</a></h1>
+					<h1 id="fh5co-logo"><a href="Pentru-tine.html">Pentru Tine</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
@@ -107,47 +101,6 @@
 			</div>
 		</header>
 
-		<!-- end:header-top -->
-
-
-
-<!--</div>
-		<div id="content">
-		  <div class="home">
-		    <div class="aside">
-		      <h1>Ingrediente</h1>
-		      <p>175gr ciocolata neagra</p>
-		      <p>150gr unt</p>
-		      <p>200gr zahar</p>
-					<p>35gr cacao pudra</p>
-					<p>7 oua</p>
-					<p>forma de copt ⌀ 25cm</p>
-		    </div>
-		    <div class="section">
-		      <div>
-		        <h2>Preparare</h2>
-		        <p>Lorem ipsum dolor sit amet, consectetuer adispiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exercitation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
-		      </div>
-		      <ul>
-		      <li class="first"> <a href="#"><img src="images/torto_cioco1.jpg" alt=""></a> </li>
-		        <li class="first"> <a href="#"><img src="images/tort_cioco2.jpg" alt=""></a> </li>
-		        <li> <a href="#"><img src="images/torto_cioco3.jpg" alt=""></a> </li>
-		      </ul>
-		    </div>
-		  </div>
-		</div> -->
-		<!--<div class="row">
-			<div class="column">
-				<img src="images/tort_cioco1.jpg" alt=Etapa1 style="width:100%">
-			</div>
-			<div class="column">
-				<img src="images/tort_cioco2.jpg" alt="Etapa2" style="width:100%">
-			</div>
-			<div class="column">
-				<img src="images/tort_cioco3.jpg" alt="Etapa3" style="width:100%">
-			</div>
-		</div>
--->
 
 <div id="fh5co-feature-product" > <!--class="fh5co-section-gray">-->
 	<div class="container">
@@ -167,41 +120,22 @@
 		</div>
 
 		<div class="row">
-		<!--	<div class="col-md-4">
-				<div class="feature-text">
-					<h3>Beneficii</h3>
-					<p>Impiedica imbatranirea si protejeaza inima</p>
-					<p>150gr unt</p>
-					<p>350gr zahar</p>
-					<p>85gr cacao pudra</p>
-					<p>225gr faina alba</p>
-					<p>2lg praf de copt</p>
-					<p>1lg esenta de vanilie</p>
-					<p>250ml lapte</p>
-					<p>200ml frisca lichida</p>
-					<p>200gr ciocolata neagra</p>
 
-
-				</div>
-			</div> -->
-			<!--<div class="col-md-4"> -->
 				<div class="feature-text">
 
-					<p>Ce promite un corp mai sanatos, o speranta de viata mai mare si oportunitatea perfecta de a face progrese? Articolul acesta nu e nicio reclama.
-						Alergarea este unul dintre cele mai eficiente si nimicitoare antrenamente in ceea ce priveste lupta cu caloriile si depresiile. Nu esti convins?
-						 Iată principalele beneficii ale alergatului zilnic:</p>
+					<h3>Not ready yet :/</h3>
 
 				</div>
 			</div>
 
 
 
-			<div class="row row-bottom-padded-md">
+	<!--		<div class="row row-bottom-padded-md">
 				<h3></h3>
 				<h3></h3>
 				<div class="col-md-4">
 					<div class="feature-text">
-						<h3>Scazi tensiunea arteriala</h3>
+					<h3>Scazi tensiunea arteriala</h3>
 						<p>Alergarea reprezinta o metoda naturala de a tine la distanta tensiunea arteriala crescuta – si rapida.
 							 Sesiunile de antrenament amplificate pot scadea tensiunea arteriala in doar cateva saptamani.  </p>
 					</div>
@@ -209,7 +143,7 @@
 				<div class="col-md-4">
 					<div class="feature-text">
 						<h3>Dai mai rar pe la medici</h3>
-						<p><!--Nu doar merele te tin departe de cabinetul medical.--> Oamenii activi sunt mai putin predispusi la cancer de colon si alte boli.
+						<p> Oamenii activi sunt mai putin predispusi la cancer de colon si alte boli.
 							 Iar doamnele care practica antrenamente intensive precum alergarea in mod regulat pot reduce riscul cancerului la san. </p>
 					</div>
 				</div>
@@ -245,16 +179,8 @@
 							In plus, alergarea favorizeaza o calitate mai buna a somnului, ceea ce inseamna ca vei dormi mai bine cat e noaptea de lunga.</p>
 					</div>
 				</div>
-			</div>
+			</div>-->
 
-
-		<!--	<div class="col-md-4">
-				<div class="feature-text">
-					<h3>Django Python</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-				</div>
-			</div>
-		</div> -->
 
 
 	</div>
@@ -263,11 +189,8 @@
 
 
 <h3></h3>
- <!--poza vine pe mijloc
-<div class="middlephoto">
-	<img src="images/tort_cioco.jpg" height="500" width="900">
-</div>
--->
+
+
 <h3></h3>
 <h3></h3>
 
@@ -291,7 +214,7 @@
 										<div class="prod-title">
 											<h3><a href=""#>Beneficiile Alergarii</a></h3>
 											<span class="posted_by">Ianuarie 13</span>
-											<span class="comment"><a href="">3<i class="icon-bubble2"></i></a></span>
+											<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 											<p>Alergarea e una dintre cele mai eficiente, necostisitoare moduri de a arde calorii și a fii în formă. </p>
 											<p><a href="2post-beneficiile-alergarii.html">Vezi mai mult...</a></p>
 
@@ -307,7 +230,7 @@
 										<div class="prod-title">
 											<h3><a href=""#>Tort de Ciocolata</a></h3>
 											<span class="posted_by">Ianuarie 12</span>
-											<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
+											<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 											<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
 											<p><a href="1post-tort-ciocolata.html">Vezi mai mult...</a></p>
 										</div>
@@ -322,7 +245,7 @@
 										<div class="prod-title">
 											<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
 											<span class="posted_by">Decembrie 30</span>
-											<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+											<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 											<p>Vrei sa ai condimente proaspete pentru mancarurile tale in fiecare zi?</p>
 											<p><a href="6post-propria-ta-gradina.html">Vezi mai mult...</a></p>
 										</div>
@@ -333,11 +256,7 @@
 						</div>
 
 
-					<!--	<div class="row">
-							<div class="col-md-4 col-md-offset-4 text-center animate-box">
-								<a href="#" class="btn btn-primary btn-lg">Our Blog</a>
-							</div>
-						</div> -->
+
 
 					</div>
 				</div>
