--- a/about.html
+++ b/about.html
@@ -123,14 +123,14 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section">
-						<h3>Si aici ce scriem?</h3>
+
 						<p>Pe noi ne stiti deja. Dar hai ca va mai spunem oricum:</p>
 					</div>
 				</div>
 
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-12 text-center animate-box">
-						<p><img src="images/desprenoii.jpeg" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
+						<p><img src="images/teoana.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive img-rounded"></p>
 					</div>
 
 				</div>
@@ -264,7 +264,7 @@
 							</figure>
 							<p>Ringo Bingo <br> <span class="text-mute">Suport tehnic si emotional</span></p>
 							<blockquote>
-								<p>Avand 9 vieti si vaste studii in supravietuirea pe strada, Ringo este un specialist si in ceea ce priveste viata de acasa.</p>
+								<p>Avand 9 vieti si studii in supravietuirea pe strada, Ringo este un specialist si in ceea ce priveste viata de acasa.</p>
 							</blockquote>
 
 
