--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ Your browser does not support the video tag.
 							</figure>
 							<p>Ringo Bingo <br> <span class="text-mute">Suport tehnic si emotional</span></p>
 							<blockquote>
-								<p>Avand 9 vieti si vaste studii in supravietuirea pe strada, Ringo este un specialist in ceea ce priveste viata de acasa.</p>
+								<p>Avand 9 vieti si studii in supravietuirea pe strada, Ringo este un specialist in ceea ce priveste viata de acasa.</p>
 							</blockquote>
 
 
