--- a/6post-propria-ta-gradina.html
+++ b/6post-propria-ta-gradina.html
@@ -1,9 +1,6 @@
 
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,19 +10,6 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
-  <!--
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -94,7 +78,7 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Gradina</a></h1>
+					<h1 id="fh5co-logo"><a href="Gradina.html">Gradina</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
@@ -222,11 +206,7 @@
 </div>
 
 <h3></h3>
- <!--poza vine pe mijloc
-<div class="middlephoto">
-	<img src="images/tort_cioco.jpg" height="500" width="900">
-</div>
--->
+
 <h3></h3>
 <h3></h3>
 
@@ -253,7 +233,7 @@
 										<div class="prod-title">
 											<h3><a href=""#>Beneficiile Alergarii</a></h3>
 											<span class="posted_by">Ianuarie 13</span>
-											<span class="comment"><a href="">3<i class="icon-bubble2"></i></a></span>
+											<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 											<p>Alergarea e una dintre cele mai eficiente, necostisitoare moduri de a arde calorii și a fii în formă. </p>
 											<p><a href="2post-beneficiile-alergarii.html">Vezi mai mult...</a></p>
 
@@ -269,7 +249,7 @@
 										<div class="prod-title">
 											<h3><a href=""#>Tort de Ciocolata</a></h3>
 											<span class="posted_by">Ianuarie 12</span>
-											<span class="comment"><a href="">2<i class="icon-bubble2"></i></a></span>
+											<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 											<p>Perfect pentru petreceri si cine festive, este usor de facut si delicios!</p>
 											<p><a href="1post-tort-ciocolata.html">Vezi mai mult...</a></p>
 										</div>
@@ -284,7 +264,7 @@
 										<div class="prod-title">
 											<h3><a href=""#>Propria ta gradina in bucatarie</a></h3>
 											<span class="posted_by">Decembrie 30</span>
-											<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
+											<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 											<p>Vrei sa ai condimente proaspete pentru mancarurile tale in fiecare zi?</p>
 											<p><a href="6post-propria-ta-gradina.html">Vezi mai mult...</a></p>
 										</div>
@@ -295,11 +275,7 @@
 						</div>
 
 
-					<!--	<div class="row">
-							<div class="col-md-4 col-md-offset-4 text-center animate-box">
-								<a href="#" class="btn btn-primary btn-lg">Our Blog</a>
-							</div>
-						</div> -->
+
 
 					</div>
 				</div>
