--- a/blogpentrutine.html
+++ b/blogpentrutine.html
@@ -153,14 +153,14 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6">
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
+							<a href="3post-atentie-la-tinuta.html"><img class="img-responsive" src="images/cover_bg_1.jpg" alt=""></a>
 							<div class="blog-text">
 								<div class="prod-title">
 									<h3><a href=""#>Tinuta de petrecere</a></h3>
 									<span class="posted_by">Decembrie 23</span>
 									<span class="comment"><a href="">0<i class="icon-bubble2"></i></a></span>
 									<p>Ce sa porti astfel incat sa obtii echilibrul perfect pentru un look necesar unei petreceri?</p>
-									<p><a href="#">Vezi mai mult...</a></p>
+									<p><a href="3post-atentie-la-tinuta.html">Vezi mai mult...</a></p>
 								</div>
 							</div>
 						</div>
