--- a/1post-tort-ciocolata.html
+++ b/1post-tort-ciocolata.html
@@ -147,9 +147,16 @@
 			<!--<div class="col-md-4"> -->
 				<div class="feature-text">
 					<h3>Preparare</h3>
-					<p>Am preîncalzit cuptorul la 180 de grade Celsius, apoi am uns cu unt o forma de tort cu diametrul de 23 cm si am tapetat-o cu faina.Am amestecat faina cu cacaoa si le-am cernut. Intr-un vas, am batut albusurile spuma tare cu un praf de sare. Am adaugat apoi o lingura de rom si treptat zaharul impreuna cu zaharul vanilat si am mixat in continuare pana am obtinut o spuma tare si lucioasa. Am adaugat apoi galbenusurile si le-am incorporat usor cu spatula. La final am adaugat faina si cacaoa in ploaie si le-am incorporat tot cu spatula usor, prin miscari de rasturnare de jos in sus. Am turnat compozitia in tava pregatita si am pus-o imediat in cuptorul incins.</p>
-					<p>Am copt 35 de minute la 180ºC pana blatul a trecut testul scobitorii (o scobitoare introdusa in blat iese curata, fara urme de aluat necopt). Cuptorul nu se deschide in primele 20 de minute si nici nu se reduce focul in timpul acesta. Altfel riscam ca blatul sa se lase.</p>
-					<p>Am luat vasul de pe aburi, am pus deoparte intr-un bol 2 linguri de crema, apoi am adaugat ciocolata. Am amestecat pana s-a topit, apoi am incorporat si cacaua. Am lasat crema sa se raceasca.Cand s-a racit, am adaugat aromele. Pentru asamblarea tortului, am taiat blatul in 3 felii egale. Am pus prima felie pe un platou, apoi am pus pe ea un sfert din crema si am nivelat-o. Am pus a doua felie de blat, apoi inca un sfert de crema si a treia felie de blat. Pentru imbracarea tortului am folosit cealalta jumatate de crema.</p>
+					<p>Am preîncalzit cuptorul la 180 de grade Celsius, apoi am uns cu unt o forma de tort cu diametrul de 23 cm si am tapetat-o cu faina.Am amestecat faina cu cacaoa si le-am cernut.
+             Intr-un vas, am batut albusurile spuma tare cu un praf de sare. Am adaugat apoi o lingura de rom si treptat zaharul impreuna cu zaharul vanilat si am mixat in continuare pana am
+              obtinut o spuma tare si lucioasa. Am adaugat apoi galbenusurile si le-am incorporat usor cu spatula. La final am adaugat faina si cacaoa in ploaie si le-am incorporat tot cu spatula
+              usor, prin miscari de rasturnare de jos in sus. Am turnat compozitia in tava pregatita si am pus-o imediat in cuptorul incins.</p>
+					<p>Am copt 35 de minute la 180ºC pana blatul a trecut testul scobitorii (o scobitoare introdusa in blat iese curata, fara urme de aluat necopt). Cuptorul nu se deschide in primele 20 de
+            minute si nici nu se reduce focul in timpul acesta. Altfel riscam ca blatul sa se lase.</p>
+					<p>Am luat vasul de pe aburi, am pus deoparte intr-un bol 2 linguri de crema, apoi am adaugat ciocolata. Am amestecat pana s-a topit, apoi am incorporat si cacaua.
+             Am lasat crema sa se raceasca.Cand s-a racit, am adaugat aromele. Pentru asamblarea tortului, am taiat blatul in 3 felii egale. Am pus prima felie pe un platou, apoi
+             am pus pe ea un sfert din crema si am nivelat-o. Am pus a doua felie de blat, apoi inca un sfert de crema si a treia felie de blat. Pentru imbracarea tortului am
+              folosit cealalta jumatate de crema.</p>
 
 
 
