--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="submit" name="send_message" value="Trimite Mesaj" class="btn btn-primary">
+										<input type="submit" name="send_message" value="Trimite" class="btn btn-primary">
 									</div>
 								</div>
 									</form>
