--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
 						</div>
 						<div class="col-md-6">
 							<div class="row">
-								<form name="contact-form" action="" method="POST">
+								<form name="contact-form" action="send_mail.php" method="POST">
 								<div class="col-md-6">
 									<div class="form-group">
 										<input type="text" id="field_name" name= "sender_name" class="form-control" placeholder="Nume">
