--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ Your browser does not support the video tag.
 					<div class="service animate-box">
 						<span><i class="icon-cloud"></i></span>
 						<h3>Echilibru</h3>
-						<p>Nu te lasa apasat de norii grei ai vietii. Dupa furtuna, soarele va rasari de fiecare data!</p>
+						<p>Nu te lasa apasat de norii grei ai vietii. Dupa furtuna, soarele va rasari de fiecare data pe strada ta!</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
